# ChangeLog for media-libs/libbluray
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libbluray-9999 (09 Jul 2010)

  09 Jul 2010; Steve Dibb <beandog@gentoo.org> +libbluray-9999.ebuild,
  +metadata.xml:
  Initial commit; bug 293311
