@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>video</herd>
-  <maintainer>
-    <email>media-video@gentoo.org</email>
-  </maintainer>
-  <use>
-    <flag name="aacs">Decrypt Blu-Ray discs with AACS</flag>
-  </use>
+<herd>video</herd>
+<maintainer>
+<email>beandog@gentoo.org</email>
+<name>Steve Dibb</name>
+</maintainer>
+<use>
+  <flag name="aacs">Add support for decryption of AACS</flag>
+  <flag name="utils">Install command-line utilities</flag>
+</use>
 </pkgmetadata>
